# SHA-256_File_Verifier

./: LICENSE  README.md
C version/: CMakeLists.txt  build.ps1  main.cpp
python version/: main.py
